# mac-to-windows-display

./: .gitignore  CONTRIBUTING.md  README.md
.cursor/: mcp.json
.cursor/commands/: build-mac.md  build-win.md  ci-fix.md  next-step.md  perf-step.md  powershell-scripts.md  ui-step.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXTEND_MODE.md  PHASE.md  RUNBOOK.md  SETUP_THUNDERBOLT_BRIDGE.md  SSH_MCP_SETUP.md  TESTING.md  TROUBLESHOOTING.md
logs/: .gitkeep
mac/: Package.resolved  Package.swift
mac/Resources/: Info.plist  ThunderMirror.entitlements
mac/Sources/ThunderMirror/: H264Encoder.swift  QuicClient.swift  ScreenCapture.swift  TestPattern.swift  ThunderMirror.swift  VirtualDisplay.swift  main.swift
mac/Sources/ThunderMirrorApp/: ContentView.swift  H264Encoder.swift  PeerDiscovery.swift  QuicClient.swift  ScreenCapture.swift  StreamingState.swift  ThunderMirrorApp.swift
mac/Tests/: ThunderMirrorTests.swift
prompts/: master-prompt.md
scripts/: 00_connect_first.md  01_setup_ssh_mac.sh  01_setup_ssh_win.ps1  02_verify_ssh_mac.sh  03_write_cursor_mcp_config.sh  build_mac_app.sh  build_win_app.ps1  check_link_mac.sh  check_link_win.ps1  install_mac.sh  install_win.ps1  run_mac.sh  run_mac_app.sh  run_win.ps1  run_win_app.ps1  smoke_test_mac.sh  smoke_test_win.ps1
shared/: Cargo.toml
shared/src/: config.rs  error.rs  lib.rs  logging.rs  protocol.rs  stats.rs  test_pattern.rs  transport.rs
win/: Cargo.toml  build.rs  run.ps1
win/src/: discovery.rs  lib.rs  main.rs
win/src/ui/: mod.rs  win32_shell.rs
