[package]
name = "thunder_shared"
version = "0.1.0"
edition = "2021"
description = "Shared library for ThunderMirror - streaming protocol, transport, and utilities"
license = "MIT"

[lib]
name = "thunder_shared"
path = "src/lib.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for protocol messages)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# Bytes handling
bytes = "1"

# QUIC transport
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }  # TLS for quinn
rcgen = "0.12"  # Certificate generation for testing

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Future feature flags
# quic = ["quinn", "rustls"]
