[package]
name = "thunder_receiver"
version = "0.1.0"
edition = "2021"
description = "ThunderMirror Windows receiver - displays streamed content from Mac"
license = "MIT"

[[bin]]
name = "thunder_receiver"
path = "src/main.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bytes handling
bytes = "1"

# Future dependencies (Phase 1+):
# quinn = "0.10"  # QUIC transport
# windows = { version = "0.52", features = [...] }  # Windows APIs

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Future feature flags
# quic = ["quinn"]

# Windows-specific settings
[target.'cfg(windows)'.dependencies]
# Windows crate will be added in Phase 3 for rendering
