[package]
name = "thunder_receiver"
version = "0.2.0"
edition = "2021"
description = "ThunderMirror Windows receiver - displays streamed content from Mac"
license = "MIT"
build = "build.rs"

[[bin]]
name = "thunder_receiver"
path = "src/main.rs"

[[bin]]
name = "ThunderReceiver"
path = "src/bin/thunder_receiver_ui.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bytes handling
bytes = "1"

# QUIC transport
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.12"

# Graphics for rendering
minifb = "0.28"  # Simple cross-platform windowing

# H.264 decoding (Phase 3)
openh264 = "0.6"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
winres = "0.1"

[features]
default = []
# Future feature flags
# quic = ["quinn"]

# Windows-specific settings
[target.'cfg(windows)'.dependencies]
# Native Win32 UI shell (Phase 3.5)
windows = { version = "0.57", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }
